src/popover.css
/* ==========================================================================
   Variables
   ========================================================================== */

/* ==========================================================================
   Base
   ========================================================================== */

.ts-popover {
    display: block;
    position: relative;
    text-decoration: none;
    color: inherit;
    border: 1px solid var(--ts-gray-300);
    border-radius: 0.4rem;
    overflow: hidden;
    background: var(--ts-gray-50);
    box-shadow: 0 2px 10px 0 rgb(0 0 0 / 10%);
}

/* ==========================================================================
   Structure
   ========================================================================== */

